--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <div class="overall-container">
+  <main>
     <div class="sedan">
       <img src="images/icon-sedans.svg" alt="">
       <h1>SEDANS</h1>
@@ -39,13 +39,8 @@
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
       rental and arrive in style.</p>
       <a class="btn" id="lux"  href="">Learn More</a>
-  </div>
-
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    </div>
+  </main>
 </body>
+
 </html>
